--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
-  
-  <title>Frontend Mentor | Newsletter sign-up form with success message</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link rel="stylesheet" href="/assets/css/reset.css">
+  <link rel="stylesheet" href="/assets/css/style.css">
+  <title>NewsLetter</title>
 </head>
+
 <body>
 
-  <!-- Sign-up form start -->
+  <main>
+    <section class="sign-up">
+      <h1 class="sign-up__title">Mantenha-se atualizado!</h1>
 
-  Stay updated!
+      <h2 class="sign-up__subtitle">Junte-se a mais de 60.000 gerentes de produto que recebem atualizações mensais sobre:</h2>
 
-  Join 60,000+ product managers receiving monthly updates on:
+      <p class="sign-up__receive">Descoberta de produtos e construção do que importa</p>
+      <p class="sign-up__receive">Medir para garantir que as atualizações sejam um sucesso</p>
+      <p class="sign-up__receive">E muito mais!</p>
 
-  Product discovery and building what matters
-  Measuring to ensure updates are a success
-  And much more!
+      <form class="sign-up__form">
+        <label class="sign-up__form_email" for="email">Informe o seu Email</label>
+        <input placeholder="email@company.com" id="email" name="email" type="email">
+        <button>Inscreva-se na newsletter mensal</button>
+      </form>
+    </section>
 
-  Email address
-  email@company.com
+    <!-- Sign-up form end -->
 
-  Subscribe to monthly newsletter
+    <!-- Success message start -->
+<!-- 
+    Thanks for subscribing!
 
-  <!-- Sign-up form end -->
+    A confirmation email has been sent to ash@loremcompany.com.
+    Please open it and click the button inside to confirm your subscription.
 
-  <!-- Success message start -->
-
-  Thanks for subscribing!
-
-  A confirmation email has been sent to ash@loremcompany.com. 
-  Please open it and click the button inside to confirm your subscription.
-
-  Dismiss message
-
+    Dismiss message -->
+    <section class="imagem__newsletter">
+      <img src="/assets/images/illustration-sign-up-desktop.svg" alt="">
+    </section>
+  </main>
   <!-- Success message end -->
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+
 </body>
+
 </html>
