Design criado para telas de 1440px - desktop

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <form class="sign-up__form">
         <label class="sign-up__form_email" for="email">Informe o seu Email</label>
         <input placeholder="email@company.com" id="email" name="email" type="email">
-        <button>Inscreva-se na newsletter mensal</button>
+        <button>Inscreva-se para novidades mensais</button>
       </form>
     </section>
 
