--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 <body>
 
   <main>
+
     <section class="sign-up">
       <h1 class="sign-up__title">Fique Atualizado!</h1>
       <span>
@@ -53,7 +54,7 @@
     Please open it and click the button inside to confirm your subscription.
 
     Dismiss message -->
-    <section class="imagem-newsletter">
+    <section class="imagem-newsletter-desktop">
     </section>
   </main>
   <!-- Success message end -->
