Alterar layout entre mensagem de sucesso e sign-up

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
 
-  <main>
+  <main class="main">
     
     <section class="sign-up">
 
@@ -41,11 +41,11 @@
       <form class="sign-up__form">
         <label class="sign-up__form_email" for="email">Informe o seu Email</label>
         <input placeholder="email@company.com" id="email" name="email" type="email">
-        <button class="btn-primary">Inscreva-se para novidades mensais</button>
+        <button class="btn-primary btn-sign-up">Inscreva-se para novidades mensais</button>
       </form>
     </section>
 
-    <section class="imagem-newsletter-desktop">
+    <section class="imagem-newsletter">
     </section>
 
     <!-- Success message start -->
@@ -53,10 +53,10 @@
       <img src="/assets/images/icon-list.svg" alt="">
       <h1 class="title">Obrigado por se inscrever!</h1>
 
-      <p>A confirmation email has been sent to <span>ash@loremcompany.com</span>. Please open it and click the button inside to confirm your subscription.</p>
+      <p>Uma mensagem de confirmação foi enviada paara <span>ash@loremcompany.com</span>. Por favor, abra e clique no botão para confirmar a sua inscrição!</p>
     
 
-      <button class="btn-primary">Dismiss message</button>
+      <button class="btn-primary btn-success-message">Descartar mensagem</button>
     </section>
 
     <!-- Sign-up form end -->
@@ -64,5 +64,7 @@
   <!-- Success message end -->
 
 </body>
+
+<script src="assets/js/principal.js"></script>
 
 </html>
