Adicionando alt das imagens

--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
           sobre:</p>
       </span>
       <div class="container">
-        <img src="/assets/images/icon-list.svg" alt="">
+        <img src="/assets/images/icon-list.svg" alt="Icone check">
         <p class="sign-up__receive">Descoberta de produtos e construção do que importa</p>
       </div>
       <div class="container">
-        <img src="/assets/images/icon-list.svg" alt="">
+        <img src="/assets/images/icon-list.svg" alt="Icone check">
         <p class="sign-up__receive">Medir para garantir que as atualizações sejam um sucesso</p>
       </div>
       <div class="container">
-        <img src="/assets/images/icon-list.svg" alt="">
+        <img src="/assets/images/icon-list.svg" alt="Icone check">
         <p class="sign-up__receive">E muito mais!</p>
       </div>
 
@@ -50,7 +50,7 @@
 
     <!-- Success message start -->
     <section class="success-message"> 
-      <img src="/assets/images/icon-list.svg" alt="">
+      <img src="/assets/images/icon-list.svg" alt="Icone check">
       <h1 class="title">Obrigado por se inscrever!</h1>
 
       <p>Uma mensagem de confirmação foi enviada paara <span>ash@loremcompany.com</span>. Por favor, abra e clique no botão para confirmar a sua inscrição!</p>
