Projeto limpo para Vercel

--- a/index.html
+++ b/index.html
@@ -50,23 +50,19 @@
 
     <section class="imagem-newsletter">
     </section>
-
-    <!-- Success message start -->
     <section class="success-message">
-      <img src="/assets/images/icon-list.svg" alt="Icone check">
+      <img src="/assets/images/icon-success.svg" alt="Icone sucesso">
       <h1 class="title">Obrigado por se inscrever!</h1>
 
-      <p>Uma mensagem de confirmação foi enviada para <span class="success-message__email">ash@loremcompany.com</span>. Por favor, abra e clique no
+      <p>Uma mensagem de confirmação foi enviada para <span class="success-message__email">ash@loremcompany.com</span>.
+        Por favor, abra e clique no
         botão para confirmar a sua inscrição!</p>
 
 
       <button class="btn-primary btn-success-message">Descartar mensagem</button>
     </section>
 
-    <!-- Sign-up form end -->
   </main>
-  <!-- Success message end -->
-
 </body>
 
 <script src="assets/js/principal.js"></script>
